--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>        
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="index.css" rel="stylesheet">
     </head>
 
     <body>
         <div id="sticky-header">
             <header>
-                <a href="./index.html">
-                    <img class="header-item" id="avatar-img" src="./avatar.jpg"><img>
-                </a>
+                <a href="./index.html">./fabrício-barretti</a>
             </header>
             
             <nav>
