--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="sticky-header">
             <header>
-                <a href="./index.html">./fabrício-barretti</a>
+                <a id="author" href="./index.html">./fabrício-barretti</a>
             </header>
             
             <nav>
