Replaced text buttons by square bracket images

--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
             </header>
             
             <nav>
-                <button class="btn" id="about-btn">[ About ]</button>
+                <!-- <button class="btn" id="about-btn">[ About ]</button>
                 <button class="btn" id="portfolio-btn">[ Portfolio ]</button>
-                <button class="btn" id="contact-btn">[ Contact ]</button>
+                <button class="btn" id="contact-btn">[ Contact ]</button> -->
+
+                <img class="btn" src="./images/about.jpg">
+                <img class="btn" src="./images/portfolio.jpg">
+                <img class="btn" src="./images/contact.jpg">
             </nav>
         </div>
 
